--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.com/startup%2Fcode%2Fsocial-buttons.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
 	  rel="stylesheet" type="text/css">
     <style type="text/css">
-      
+         
       /* Large desktop */
       @media (min-width: 980px) {
       body {
@@ -205,13 +206,37 @@
 	    <img class="img-polaroid" src="http://placehold.it/480x300">
 	    </div>
 	  <div class="span5 copy">
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed dui at risus pulvinar accumsan. Proin fringilla ultricies sapien, eget cursus risus accumsan quis. Sed vel urna vitae purus suscipit malesuada. Donec ac aliquet metus. Ut quis magna quis magna lobortis ultricies at vitae leo. Quisque ornare metus lectus. Phasellus rutrum enim condimentum laoreet dignissim. Nulla facilisi. Donec blandit libero ut ipsum consequat, id molestie enim condimentum. Pellentesque iaculis feugiat mi, in bibendum enim scelerisque quis.</p>
+	    <p>
+	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            mollis justo velit at nunc. Fusce nec egestas sem. Donec
+            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+            volutpat lorem ut congue malesuada. In facilisis scelerisque
+            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+            rutrum, nunc leo tempus nisl, eu mollis justo velit at
+            nunc. Fusce nec egestas sem. Donec fringilla.	      
+	      </p>
 	    </div>
 	  </div>
 
 	<div class="row-fluid section2">
 	  <div class="span5 offset1 copy copy-right">
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed dui at risus pulvinar accumsan. Proin fringilla ultricies sapien, eget cursus risus accumsan quis. Sed vel urna vitae purus suscipit malesuada. Donec ac aliquet metus. Ut quis magna quis magna lobortis ultricies at vitae leo. Quisque ornare metus lectus. Phasellus rutrum enim condimentum laoreet dignissim. Nulla facilisi. Donec blandit libero ut ipsum consequat, id molestie enim condimentum. Pellentesque iaculis feugiat mi, in bibendum enim scelerisque quis.</p>
+	    <p>
+	      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            mollis justo velit at nunc. Fusce nec egestas sem. Donec
+            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+            volutpat lorem ut congue malesuada. In facilisis scelerisque
+            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+            rutrum, nunc leo tempus nisl, eu mollis justo velit at
+            nunc. Fusce nec egestas sem. Donec fringilla.
+	      </p>
 	    </div>
 	  <div class="span5 asset">
 	    <img class="img-polaroid" src="http://placehold.it/480x300">
@@ -232,9 +257,9 @@
 		    What does FAQ stand for?
 		    </a>
 		  </div>
-		<div id="collapseOne" class="accordion-body-collapse">
+		<div id="collapseOne" class="accordion-body collapse">
 		  <div class="accordion-inner">
-		    Frequently Askes Question.
+		    Frequently Asked Question.
 		    </div>
 		  </div>
 		</div>
@@ -246,7 +271,7 @@
 		    </a>
 		  </div>
 		<div id="collapseTwo" class="accordion-body collapse">
-		  <div class="accordion inner">
+		  <div class="accordion-inner">
 		    A question which is commonly asked by users.
 		    </div>
 		  </div>
@@ -270,6 +295,5 @@
 
 
 	</div>
-      </div>
-    </body>
-  </html>
+  </body>
+</html>
